--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body class="page">
     <div class="page__content">
-        <header class="header">
+        <header class="header page__section" >
             <img class="header__logo" src="./images/header.svg" alt="Around the U.S. Logo" />
         </header>
         <main class="content">
