--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
                 <img class="profile__image" src="./images/jacques-cousteau.png" alt="Profile" />
                 <div class="profile__info">
                     <h1 class="profile__title">Jacques Cousteau</h1>
-                    <button class="profile__edit-button" type="button"></button>
+                    <button class="profile__edit-button" type="button"  id="profile-edit-button"></button>
                     <p class="profile__description">Explorer</p>
                 </div>
                 <button class="profile__add-button" type="button"></button>
             </section>
             <section class="cards page__section">
                 <ul class="cards__list">
-                    <li class="card">
+                    <!-- <li class="card">
                         <img src="./images/yosemite.jpg" class="card__image" alt="Yosemite Valley"/>
                         <div class="card__description">
                             <h2 class="card__title">Yosemite Valley</h2>
@@ -69,7 +69,7 @@
                             <h2 class="card__title">Lago Di Braies</h2>
                             <button class="card__like-button" type="button"></button>
                         </div>
-                    </li>
+                    </li> -->
                 </ul>
             </section>
         </main>
@@ -77,5 +77,43 @@
             <p class="footer__copyright">&copy; 2023 Around the US</p>
           </footer>
     </div>
+
+    <div class="modal" id="profile-edit-modal">
+        <div class="modal__container">
+          <button
+            class="modal__close"
+            id="modal-close-button"
+            type="button"></button>
+          <h2 class="modal__title">Edit profile</h2>
+          <form class="modal__form form" id="profile-edit-form">
+            <input
+              class="modal__input"
+              type="text"
+              placeholder="Name"
+              name="title"
+              id="profile-title-input"
+              required />
+            <input
+              class="modal__input"
+              type="text"
+              placeholder="About"
+              name="description"
+              id="profile-description-input"
+              required />
+            <button class="modal__button" type="submit">Save</button>
+          </form>
+        </div>
+      </div>
+  
+      <template id="card-template">
+        <li class="card">
+          <img class="card__image" src="" alt="" />
+          <div class="card__description">
+            <h2 class="card__title"></h2>
+            <button class="card__like-button" type="button"></button>
+          </div>
+        </li>
+      </template>
+      <script src="./scripts/index.js" defer></script>
   </body>
 </html>
