--- a/index.html
+++ b/index.html
@@ -80,10 +80,7 @@
 
     <div class="modal" id="profile-edit-modal">
         <div class="modal__container">
-          <button
-            class="modal__close"
-            id="modal-close-button"
-            type="button"></button>
+          <button class="modal__close" id="modal-close-button" type="button"></button>
           <h2 class="modal__title">Edit profile</h2>
           <form class="modal__form form" id="profile-edit-form">
             <input
@@ -104,16 +101,18 @@
           </form>
         </div>
       </div>
-  
-      <template id="card-template">
-        <li class="card">
-          <img class="card__image" src="" alt="" />
-          <div class="card__description">
-            <h2 class="card__title"></h2>
-            <button class="card__like-button" type="button"></button>
-          </div>
-        </li>
-      </template>
-      <script src="./scripts/index.js" defer></script>
+
+
+    <template id="card-template">
+      <li class="card">
+        <img class="card__image" src="" alt="" />
+        <div class="card__description">
+          <h2 class="card__title"></h2>
+          <button class="card__like-button" type="button"></button>
+        </div>
+      </li>
+    </template>
+
+    <script src="./scripts/index.js" defer></script> 
   </body>
 </html>
