--- a/index.html
+++ b/index.html
@@ -76,32 +76,18 @@
         <footer class="footer page__section">
             <p class="footer__copyright">&copy; 2023 Around the US</p>
           </footer>
-    </div>
 
     <div class="modal" id="profile-edit-modal">
         <div class="modal__container">
           <button class="modal__close" id="modal-close-button" type="button"></button>
-          <h2 class="modal__title">Edit profile</h2>
-          <form class="modal__form form" id="profile-edit-form">
-            <input
-              class="modal__input"
-              type="text"
-              placeholder="Name"
-              name="title"
-              id="profile-title-input"
-              required />
-            <input
-              class="modal__input"
-              type="text"
-              placeholder="About"
-              name="description"
-              id="profile-description-input"
-              required />
+          <form class="modal__form" id="profile-edit-form">
+            <h2 class="modal__title">Edit Profile</h2>
+            <input class="modal__input" type="text" placeholder="Name" name="title" id="profile-title-input" required />
+            <input class="modal__input" type="text" placeholder="About" name="description" id="profile-description-input" required />
             <button class="modal__button" type="submit">Save</button>
           </form>
         </div>
       </div>
-
 
     <template id="card-template">
       <li class="card">
@@ -112,6 +98,7 @@
         </div>
       </li>
     </template>
+    </div>
 
     <script src="./scripts/index.js" defer></script> 
   </body>
