--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0" />
     <meta content="ie=edge" http-equiv="X-UA-Compatible" />
-    <meta name="description" content="Practicum Sprint 3 Around The U.S." />
+    <meta name="description" content="Practicum Sprint 5 Around The U.S." />
     <meta name="keywords" content="Responsive Website" />
     <meta name="author" content="Fred Cheng" />
     <title>Around the US</title>
@@ -13,92 +13,95 @@
   </head>
   <body class="page">
     <div class="page__content">
-        <header class="header page__section" >
-            <img class="header__logo" src="./images/header.svg" alt="Around the U.S. Logo" />
-        </header>
-        <main class="content">
-            <section class="profile page__section">
-                <img class="profile__image" src="./images/jacques-cousteau.png" alt="Profile" />
-                <div class="profile__info">
-                    <h1 class="profile__title">Jacques Cousteau</h1>
-                    <button class="profile__edit-button" type="button"  id="profile-edit-button"></button>
-                    <p class="profile__description">Explorer</p>
-                </div>
-                <button class="profile__add-button" type="button"></button>
-            </section>
-            <section class="cards page__section">
-                <ul class="cards__list">
-                    <!-- <li class="card">
-                        <img src="./images/yosemite.jpg" class="card__image" alt="Yosemite Valley"/>
-                        <div class="card__description">
-                            <h2 class="card__title">Yosemite Valley</h2>
-                            <button class="card__like-button" type="button"></button>
-                        </div>
-                    </li>
-                    <li class="card">
-                        <img src="./images/lake-louise.jpg" class="card__image" alt="Lake Louise"/>
-                        <div class="card__description">
-                            <h2 class="card__title">Lake Louis</h2>
-                            <button class="card__like-button" type="button"></button>
-                        </div>
-                    </li>
-                    <li class="card">
-                        <img src="./images/bald-mountains.jpg" class="card__image" alt="Bald Mountain"/>
-                        <div class="card__description">
-                            <h2 class="card__title">Bald Mountain</h2>
-                            <button class="card__like-button" type="button"></button>
-                        </div>
-                    </li>
-                    <li class="card">
-                        <img src="./images/latemar.jpg" class="card__image" alt="Latemar"/>
-                        <div class="card__description">
-                            <h2 class="card__title">Latemar</h2>
-                            <button class="card__like-button" type="button"></button>
-                        </div>
-                    </li>
-                    <li class="card">
-                        <img src="./images/vanoise.jpg" class="card__image" alt="Vanoise National Park"/>
-                        <div class="card__description">
-                            <h2 class="card__title">Vanoise National Park</h2>
-                            <button class="card__like-button" type="button"></button>
-                        </div>
-                    </li>
-                    <li class="card">
-                        <img src="./images/lago.jpg" class="card__image" alt="Lago Di Braies"/>
-                        <div class="card__description">
-                            <h2 class="card__title">Lago Di Braies</h2>
-                            <button class="card__like-button" type="button"></button>
-                        </div>
-                    </li> -->
-                </ul>
-            </section>
-        </main>
-        <footer class="footer page__section">
-            <p class="footer__copyright">&copy; 2023 Around the US</p>
-          </footer>
+      <header class="header">
+        <img class="header__logo" src="./images/logo.svg" alt="Around the U.S. logo"/>
+      </header>
+      <main class="content">
+        <section class="profile page__section">
+          <img class="profile__image" src="./images/jacques-cousteau.jpg" alt="avatar jacques cousteau"/>
+          <div class="profile__info">
+            <h1  id="profile-title" class="profile__title">Jacques Cousteau</h1>
+            <button id="profile-edit-button" class="profile__edit-button" type="button"></button>
+            <p id="profile-description" class="profile__description">Explorer</p>
+          </div>
+          <button class="profile__add-button" type="button"></button>
+        </section>
+        <section class="cards page__section">
+          <ul class="cards__list"></ul>
+        </section>
+      </main>
+      <footer class="footer page__section">
+        <p class="footer__copyright">&copy; 2023 Around the U.S.</p>
+      </footer>
+    </div>
 
+    <!--Edit Profile Modal-->
     <div class="modal" id="profile-edit-modal">
-        <div class="modal__container">
-          <button class="modal__close" id="modal-close-button" type="button"></button>
-          <form class="modal__form" id="profile-edit-form">
-            <h2 class="modal__title">Edit Profile</h2>
-            <input class="modal__input" type="text" placeholder="Name" name="title" id="profile-title-input" required />
-            <input class="modal__input" type="text" placeholder="About" name="description" id="profile-description-input" required />
-            <button class="modal__button" type="submit">Save</button>
-          </form>
-        </div>
-      </div>
+      <div class="modal__container">
+        <button class="modal__close" id="profile-modal-close-button"></button>
 
+        <form class="modal__form">
+          <p class="modal__title">Edit Profile</p>
+            <input
+            id="profile-title-input"
+            class="modal__input"
+            type="text"
+              placeholder="Name"
+            />
+            <input
+              id="profile-description-input"
+              class="modal__input"
+              type="text"
+              placeholder="About me"
+            />
+            <button class="modal__button" type="submit">Save</button>
+        </form>
+      </div>
+    </div>
+
+    <!--Task 2/7. Form for adding a card-->
+    <!-- Task 3/7. Adding a card -->
+    <div id="add-card-modal" class="modal">
+      <div class="modal__container">
+        <button class="modal__close" id="add-card-modal-close-button"></button>
+        <form class="modal__form" id="add-card-form">
+          <p class="modal__title">New place</p>
+            <input id="add-card-title-input" class="modal__input" type="text" placeholder="Title"/>
+            <input id="add-card-image-url" class="modal__input" type="text" placeholder="Image link"/>
+            <button class="modal__button" type="submit">Create</button>
+        </form>
+      </div>
+    </div>
+
+    <!-- Task 6/7. Opening the picture modal -->
+    <!-- Task 7/7. Smooth modal opening and closing -->
+    <!-- https://stackoverflow.com/questions/3331353/transitions-on-the-css-display-property -->
+    <!-- The yosemite image is 1600px and the preview is not the same as on figma.  
+    However, rest of the images does render according to figma specs -->
+    <div id="preview-image-modal" class="modal" >
+      <div class="modal__preview">
+        <button id="preview-image-modal-close-button"
+        class="modal__close"
+        type="button"
+        ></button>
+        <img class="modal__preview-image" src="#" alt="#" />
+        <p class="modal__preview-caption"></p>
+      </div>
+    </div>
+    
+    <!--Card Template-->
     <template id="card-template">
       <li class="card">
-        <img class="card__image" src="" alt="" />
+        <img class="card__image" src="#" alt="#" />
+        <!-- Task 5/7. Deleting a card -->
+        <button class="card__delete-icon" type="button"></button>
         <div class="card__description">
           <h2 class="card__title"></h2>
+          <!-- Task 4/7. The "Like" button -->
           <button class="card__like-button" type="button"></button>
         </div>
       </li>
     </template>
-    </div>
 
     <script src="./scripts/index.js" defer></script> 
   </body>
