--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0" />
     <meta content="ie=edge" http-equiv="X-UA-Compatible" />
-    <meta name="description" content="Practicum Sprint 5 Around The U.S." />
+    <meta name="description" content="Practicum Sprint 6 Around The U.S." />
     <meta name="keywords" content="Responsive Website" />
     <meta name="author" content="Fred Cheng" />
     <title>Around the US</title>
@@ -41,32 +41,31 @@
         <button class="modal__close" id="profile-modal-close-button"></button>
         <form class="modal__form">
           <h1 class="modal__title">Edit Profile</h1>
-            <input id="profile-title-input" class="modal__input" type="text" placeholder="Name" />
-            <input id="profile-description-input" class="modal__input" type="text" placeholder="About me"/>
+            <input id="profile-title-input" class="modal__input" type="text" placeholder="Name" minlength="2" maxlength="40" required/>
+            <span id="profile-title-input-error" class="modal__error" ></span>
+            <input id="profile-description-input" class="modal__input" type="text" placeholder="About me" minlength="2" maxlength="200" required/>
+            <span id="profile-description-input-error" class="modal__error"></span>
             <button class="modal__button" type="submit">Save</button>
         </form>
       </div>
     </div>
 
-    <!--Task 2/7. Form for adding a card-->
-    <!-- Task 3/7. Adding a card -->
+    <!--Add Card Modal -->
     <div id="add-card-modal" class="modal">
       <div class="modal__container">
         <button class="modal__close" id="add-card-modal-close-button"></button>
         <form class="modal__form" id="add-card-form">
           <h1 class="modal__title">New Place</h1>
-            <input id="add-card-title-input" class="modal__input" type="text" placeholder="Title"/>
-            <input id="add-card-image-url" class="modal__input" type="url" placeholder="Image link"/>
+            <input id="add-card-title-input" class="modal__input" type="text" placeholder="Title" minlength="1" maxlength="30" required/>
+            <span id="add-card-title-input-error" class="modal__error" ></span>
+            <input id="add-card-image-url" class="modal__input" type="url" placeholder="Image link" required/>
+            <span id="add-card-image-url-error" class="modal__error" ></span>
             <button class="modal__button" type="submit">Create</button>
         </form>
       </div>
     </div>
 
-    <!-- Task 6/7. Opening the picture modal -->
-    <!-- Task 7/7. Smooth modal opening and closing -->
-    <!-- https://stackoverflow.com/questions/3331353/transitions-on-the-css-display-property -->
-    <!-- The yosemite image is 1600px and the preview is not the same as on figma.  
-    However, rest of the images does render according to figma specs -->
+    <!--Preview Image Modal-->    
     <div id="preview-image-modal" class="modal" >
       <div class="modal__preview">
         <button id="preview-image-modal-close-button"
@@ -82,16 +81,15 @@
     <template id="card-template">
       <li class="card">
         <img class="card__image" src="#" alt="#" />
-        <!-- Task 5/7. Deleting a card -->
         <button class="card__delete-icon" type="button"></button>
         <div class="card__description">
           <h2 class="card__title"></h2>
-          <!-- Task 4/7. The "Like" button -->
           <button class="card__like-button" type="button"></button>
         </div>
       </li>
     </template>
-
     <script src="./scripts/index.js" defer></script> 
+    <!-- Added validation Java Script -->
+    <script src="./scripts/validate.js" defer></script>
   </body>
 </html>
