--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <button id="profile-edit-button" class="profile__edit-button" type="button"></button>
             <h2 id="profile-description" class="profile__description">Explorer</h2>
           </div>
-          <button class="profile__add-button" type="button"></button>
+          <button id="profile__add-button" class="profile__add-button" type="button"></button>
         </section>
         <section class="cards page__section">
           <ul class="cards__list"></ul>
@@ -38,13 +38,13 @@
     <!--Edit Profile Modal-->
     <div class="modal" id="profile-edit-modal">
       <div class="modal__container">
-        <button class="modal__close" id="profile-modal-close-button"></button>
-        <form class="modal__form" id="profile-form">
+        <button id="profile-modal-close-button" class="modal__close" ></button>
+        <form id="profile-form" class="modal__form" >
           <h1 class="modal__title">Edit Profile</h1>
             <input id="profile-title-input" class="modal__input" type="text" placeholder="Name" minlength="2" maxlength="40" required/>
-            <span id="profile-title-input-error" class="modal__error" ></span>
+            <span id="profile-title-input-error" class="modal__input-error" ></span>
             <input id="profile-description-input" class="modal__input" type="text" placeholder="About me" minlength="2" maxlength="200" required/>
-            <span id="profile-description-input-error" class="modal__error"></span>
+            <span id="profile-description-input-error" class="modal__input-error"></span>
             <button class="modal__button" type="submit">Save</button>
         </form>
       </div>
@@ -53,13 +53,13 @@
     <!--Add Card Modal -->
     <div id="add-card-modal" class="modal">
       <div class="modal__container">
-        <button class="modal__close" id="add-card-modal-close-button"></button>
-        <form class="modal__form" id="add-card-form">
+        <button id="add-card-modal-close-button" class="modal__close" ></button>
+        <form id="add-card-form" class="modal__form" >
           <h1 class="modal__title">New Place</h1>
             <input id="add-card-title-input" class="modal__input" type="text" placeholder="Title" minlength="1" maxlength="30" required/>
-            <span id="add-card-title-input-error" class="modal__error" ></span>
+            <span id="add-card-title-input-error" class="modal__input-error" ></span>
             <input id="add-card-image-url" class="modal__input" type="url" placeholder="Image link" required/>
-            <span id="add-card-image-url-error" class="modal__error" ></span>
+            <span id="add-card-image-url-error" class="modal__input-error" ></span>
             <button class="modal__button" type="submit">Create</button>
         </form>
       </div>
