--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,9 @@
         <section class="profile page__section">
           <img class="profile__image" src="<%=require('./images/jacques-cousteau.png')%>" alt="avatar jacques cousteau"/>
           <div class="profile__info">
-            <h1 id="profile-title" class="profile__title">Jacques Cousteau</h1>
+            <h1 id="profile-title" class="profile__title" name="name">Jacques Cousteau</h1>
             <button id="profile-edit-button" class="profile__edit-button" type="button"></button>
-            <h2 id="profile-description" class="profile__description">Explorer</h2>
+            <h2 id="profile-description" class="profile__description" name="about">Explorer</h2>
           </div>
           <button id="profile__add-button" class="profile__add-button" type="button"></button>
         </section>
@@ -59,9 +59,9 @@
         <button id="add-card-modal-close-button" class="modal__close" ></button>
         <form id="add-card-form" class="modal__form" >
           <h1 class="modal__title">New Place</h1>
-            <input id="add-card-title-input" class="modal__input" type="text" placeholder="Title" minlength="1" maxlength="30" required/>
+            <input id="add-card-title-input" class="modal__input" name="name" type="text" placeholder="Title" minlength="1" maxlength="30" required/>
             <span id="add-card-title-input-error" class="modal__input-error" ></span>
-            <input id="add-card-image-url" class="modal__input" type="url" placeholder="Image link" required/>
+            <input id="add-card-image-url" class="modal__input" name="link" type="url" placeholder="Image link" required/>
             <span id="add-card-image-url-error" class="modal__input-error" ></span>
             <button class="modal__button" type="submit">Create</button>
         </form>
