--- a/src/index.html
+++ b/src/index.html
@@ -44,9 +44,9 @@
         <button id="profile-modal-close-button" class="modal__close" ></button>
         <form id="profile-form" class="modal__form" >
           <h1 class="modal__title">Edit Profile</h1>
-            <input id="profile-title-input" class="modal__input" type="text" placeholder="Name" minlength="2" maxlength="40" required/>
+            <input id="profile-title-input" class="modal__input" type="text" name="name" placeholder="Name" minlength="2" maxlength="40" required/>
             <span id="profile-title-input-error" class="modal__input-error" ></span>
-            <input id="profile-description-input" class="modal__input" type="text" placeholder="About me" minlength="2" maxlength="200" required/>
+            <input id="profile-description-input" class="modal__input" type="text" name="description" placeholder="About me" minlength="2" maxlength="200" required/>
             <span id="profile-description-input-error" class="modal__input-error"></span>
             <button class="modal__button" type="submit">Save</button>
         </form>
